cabal-version:       2.4
name:                bodhi-cli
version:             0.0.0.0
synopsis:            Bodhi CLI client outputing JSON
description:         Bodhi CLI client outputing JSON
homepage:            https://github.com/juhp/bodhi-cli
bug-reports:         https://github.com/juhp/bodhi-cli/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/bodhi-cli.git

common common-options
  build-depends:       aeson
                     , aeson-pretty
                     , base >= 4.9.1.0 && < 5
                     , basic-prelude
                     , bodhi
                     , bytestring
                     , simple-cmd-args >= 0.1.6
                     , split
                     , text
                     , unordered-containers

  mixins:              base hiding (Prelude)
                     , basic-prelude (BasicPrelude as Prelude)

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable bodhi-cli
  import:              common-options
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
